--- a/esp.html
+++ b/esp.html
@@ -89,19 +89,19 @@
     <!--experiencia-->
     <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
         <div class="row mt-3 p-5">
-            <h3>EXPERIENCE</h3>
+            <h3>EXPERIENCIA</h3>
         </div>
             <div class="row mt-4">
             <div class="mt-2">
                 <h4> PRODUCTORA EJECUTIVA - TODO NOTICIAS, BUENOS AIRES </h4>
-                 <p> <span class="material-icons md-dark">access_time_filled</span> 2013 - CURRENTLY </p></span>   
+                 <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2013 - CURRENTLY </p></span>   
                 <p><em>Mi responsabilidad es contactar entrevistados, armar el orden, hacer la cobertura y eventualmente videograph. Estoy a cargo de TN de Noche con Franco Mercuriali. Tres personas reportan a mí en el turno noche.</em></p>
                 <a class="nav-link text-black" href="http://tn.com.ar/"><p><span class="material-icons md-dark">link</span>http://tn.com.ar/</p></a>
             </div>
             
             <div class="mt-5">
                 <h4> REDACTORA FREELANCE - EL CONFIDENCIAL, SPAIN </h4>
-                <p> <span class="material-icons md-dark">access_time_filled</span> 2017 - CURRENTLY </p>
+                <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2017 - CURRENTLY </p>
                 <p><em>El Confidencial es un medio digital español. Escribo sobre eventos políticos y económicos de la actualidad argentina.
                 </em></p>
                 <a class="nav-link text-black" href="https://www.elconfidencial.com/autores/corresponsales-ec12-1976/"><p><span class="material-icons md-dark">link</span>https://www.elconfidencial.com</p></a>
@@ -109,7 +109,7 @@
         
             <div class="mt-5">
                 <h4> BLOGGER - 20 MINUTOS, SPAIN </h4>
-                <p> <span class="material-icons md-dark">access_time_filled</span>2013 - 2016 </p>   
+                <p class="time"> <span class="material-icons md-dark">access_time_filled</span>2013 - 2016 </p>   
                 <p><em>Este trabajo comenzó como un proyecto personal con varias amigas europeas. Armamos un blog que luego ganó los Premios 20 Blogs y pasamos a publicar para 20 Minutos España.</em></p>
                 <a class="nav-link text-black" href="https://blogs.20minutos.es/goldman-sachs-is-not-an-after-shave/"><p><span class="material-icons md-dark">link</span>https://blogs.20minutos.es/goldman-sachs-is-not-an-after-shave/</p></a>
             </div>
@@ -134,23 +134,23 @@
     <!--estudios-->
     <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
         <div class="row mt-3 p-5">
-            <h3>EDUCATION</h3>
+            <h3>EDUCACIÓN</h3>
         </div>
             <div class="row mt-4">
             <div class="mt-2">
-                <h4> CODO A CODO PROGRAM - WEB DEVELOPMENT </h4>
+                <h4> CODO A CODO PROGRAM - DESARROLLO FULL STACK JAVASCRIPT </h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2021</p></span>   
                 <p><em>Agencia de Aprendizaje a lo Largo de la Vida</em></p>
                 <a class="nav-link text-black" href="https://aulasvirtuales.bue.edu.ar/"><p><span class="material-icons md-dark">link</span>https://aulasvirtuales.bue.edu.ar/</p></a>
             </div>
             <div class="mt-5">
-                <h4> INTERNATIONAL JOURNALISM - MASTER'S DEGREE </h4>
+                <h4> MASTER EN PERIODISMO ESPECIALIZADO EN POLÍTICA INTERNACIONAL </h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2012 - 2013</p></span>   
                 <p><em>Universitat Pompeu Fabra</em></p>
                 <a class="nav-link text-black" href="https://www.upf.edu/es/"><p><span class="material-icons md-dark">link</span>https://www.upf.edu/es/</p></a>
             </div>
             <div class="mt-5">
-                <h4> COMMUNICATION - BACHELOR'S DEGREE </h4>
+                <h4> LICENCIATURA EN CIENCIAS DE LA COMUNICACIÓN</h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2008-2011</p></span>   
                 <p><em>Universidad Argentina de la Empresa</em></p>
                 <a class="nav-link text-black" href="https://uade.edu.ar/"><p><span class="material-icons md-dark">link</span>https://uade.edu.ar/</p></a>
@@ -162,28 +162,28 @@
     <!--idiomas y cursos-->
     <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
         <div class="row mt-3 p-5">
-            <h3>LANGUAGES</h3>
+            <h3>IDIOMAS</h3>
         </div>
             <div class="row mt-4">
             <div class="mt-2">
-                <h4> SPANISH </h4> 
-                <p><em>Native</em></p>
+                <h4> ESPAÑOL </h4> 
+                <p><em>Nativo</em></p>
             </div>
             <div class="mt-5">
-                <h4> ENGLISH </h4> 
-                <p><em>Advanced / professional level</em></p>
+                <h4> INGLÉS </h4> 
+                <p><em>Avanzado / profesional</em></p>
             </div>
             <div class="mt-5">
-                <h4> FRENCH </h4> 
-                <p><em>Intermediate - DELF B2</em></p>
+                <h4> FRANCÉS </h4> 
+                <p><em>Intermedio - DELF B2</em></p>
             </div>
             <div class="mt-5">
-            <h4> PORTUGUESE </h4> 
-                <p><em>Basic - no formal diploma</em></p>
+            <h4> PORTUGUÉS </h4> 
+                <p><em>Básico - sin diploma</em></p>
             </div>
             <div class="mt-5">
-                <h4> ITALIAN </h4> 
-                    <p><em>Currently studying</em></p>
+                <h4> ITALIANO </h4> 
+                    <p><em>En curso</em></p>
                 </div>
         </div>
     </div>
