--- a/fran.html
+++ b/fran.html
@@ -51,9 +51,11 @@
             <div>
                 <p id="desc"> Après une expérience de 8 ans dans la Production de Télévision, je recherche un poste en Communication d’Entreprises.
                     Titulé en Communication à l'Université Argentine de l’Entreprise (UADE), je maîtrise les domaines de gestion de médias et contrôle de crises.
+                    <br>
                     Mon expérience dans Artear Canal 13/TN, m’a permis de connaître le fonctionnement des structures financières et politiques du pays et m’a fourni de contacts du monde entrepreneurial et syndical.
-                    Pendant ces années j’ai appris à travailler en différentes équipes, à prendre de décisions et à suivre les directions de mes supérieures hiérarchiques. Je me considère une femme motivé, disponible et polyvalente. 
-                    Intégrer la société Carrefour au poste de Chef de Communication m’attire particulièrement parce-que ce travail pourrait signifier une grande croissance personnel. Il est aussi un grand défi professionnel, étant donné la situation des supermarchés en Argentine 2019.
+                    <br>
+                    Pendant ces années j’ai appris à travailler en différentes équipes, à prendre de décisions et à suivre les directions de mes supérieures hiérarchiques. Je me considère une femme motivé, disponible et polyvalente. Un travail corporatif m’attire particulièrement parce-que il pourrait signifier une grande croissance personnel. Il est aussi un grand défi professionnel.
+                   <br>
                     J’ai bien conscience d’avoir encore beaucoup à apprendre et c’est justement cette perspective qui me motive le plus. 
                 </p>
 
@@ -111,11 +113,11 @@
     <!--estudios-->
     <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
         <div class="row mt-3 p-5">
-            <h3><strong>EDUCATION</strong></h3>
+            <h3><strong>ÉDUCATION</strong></h3>
         </div>
             <div class="row mt-4">
             <div class="mt-2">
-                <h4> CODO A CODO PROGRAM - WEB DEVELOPMENT </h4>
+                <h4> CODO A CODO PROGRAM - JAVASCRIPT FULL STACK DEVELOPMENT </h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2021</p></span>   
                 <p><em>Agencia de Aprendizaje a lo Largo de la Vida</em></p>
                 <a class="nav-link text-black" href="https://aulasvirtuales.bue.edu.ar/"><p><span class="material-icons md-dark">link</span>https://aulasvirtuales.bue.edu.ar/</p></a>
