--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!--fin nav-->
     
     <!--foto + presentacion-->
-    <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
+    <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__fadeInLeft">
         <div class="row ">
             <H1>VERÓNICA FURLAN</H1>
             <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
@@ -50,7 +50,7 @@
             <H2>JOURNALIST & JR DEVELOPER</H2>
             <div>
                 <p id="desc"> Behind every computer or mobile device there is a person. Behind every post, a thought. 
-                    
+                    <br>
                     My objective in life is to make the internet a little less angry and a little kinder. 
                     <br>
                     I am journalist willing to explore the digital and corporate worlds. I have experience in TV Broadcasting and news writing for Argentina and Spain.
@@ -83,7 +83,7 @@
             <img src='./IMG/woolfok.jpg' class='imgRedonda' />
         </center>
 </div>
-<div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
+<div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__fadeInLeft ">
    
    <div class="row">
     <p><em>""Nothing has really happened until it has been described" <br> - Virginia Woolf</em></p>
@@ -96,7 +96,7 @@
     <!--fin present-->
 
     <!--experiencia-->
-    <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
+    <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__fadeInLeft">
         <div class="row mt-3 p-5">
             <h3>EXPERIENCE</h3>
         </div>
