--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,7 @@
                     </div>
                     
                 </div>
+                <div class="container text-center">
                 <div class="row m-3 text-center">
                     <H2>EL CONFIDENCIAL</H2>
                 </div>
@@ -76,7 +77,9 @@
                     <div class="card-body">
                       <h5 class="card-title">Ricardo Darín, el actor que dijo 'no' a Hollywood y sobrevivió a la crispación política de su país</h5>
                       <p class="card-text">El emblemático actor argentino, padre de Chino Darín, cumple 65 años en un momento espléndido de su carrera.</p>
+                      <div class="botoncito">
                       <a href="https://www.vanitatis.elconfidencial.com/celebrities/2022-01-16/ricardo-darin-cumpleanos-biografia-chino-mujer_3358485/" target="_blank" ><button type="button" class="btn btn-light">Link al artículo</button></a>
+                    </div>
                     </div>
                 </div>
                 <div class="card" style="max-width: 500px;">
@@ -233,6 +236,7 @@
                 </div>
             </div>
           </div>       
+        </div>
         </div>
     </section>
 </body>
