--- a/esp.html
+++ b/esp.html
@@ -77,7 +77,7 @@
                     En 2012-2013 hice un máster en la Universitat Pompeu Fabra de Barcelona que me abrió muchas puertas y me regaló un puñado de amigos catalanes, españoles y portugueses. Gracias a ese máster volví a la Argentina para trabajar en TN como becaria y desde entonces estoy allí.
                     <br>
                     <br>
-                    Hace un tiempo me sumergí en el mundo de la programación gracias al programa Codo a Codo de la Ciudad de Buenos Aires. Elegí estudiar Javascript y en el camino aprendí bastante de HTML y CSS. Descubrí que me apasiona el diseño web y no paro de hacer mini proyectos en mi tiempo libre. Mi objetivo a largo plazo es trabajar remoto y poder escapar de la ciudad.
+                    Hace un tiempo me sumergí en el mundo de la programación gracias al curso Codo a Codo de la Ciudad de Buenos Aires. Elegí estudiar Javascript y en el camino aprendí suficiente HTML y CSS como para hacer esta página. Descubrí que me apasiona el diseño web y no paro de hacer mini proyectos en mi tiempo libre. Mi objetivo a largo plazo es trabajar remoto. Tengo ciudadanía italiana y permiso para trabajar en algunos países de Europa.
                 </p>
 
             </div>
@@ -149,7 +149,7 @@
         </div>
             <div class="row mt-4">
             <div class="mt-2" data-aos="fade-up">
-                <h4> CODO A CODO PROGRAM - DESARROLLO FULL STACK JAVASCRIPT </h4>
+                <h4> CODO A CODO - DESARROLLO FULL STACK JAVASCRIPT </h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2021</p></span>   
                 <p><em>Agencia de Aprendizaje a lo Largo de la Vida</em></p>
                 <a class="nav-link text-black" href="https://aulasvirtuales.bue.edu.ar/"><p><span class="material-icons md-dark">link</span>https://aulasvirtuales.bue.edu.ar/</p></a>
@@ -200,12 +200,12 @@
     </div>
     <!--fin idiomas-->
 
-    <!--footer-->
-    <footer>
-        <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5 animate__animated animate__flash">
+      <!--footer-->
+      <footer>
+        <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
             <div class="row">
                 
-            <p>
+            <p class="footer">
                 Site constructed by Veronica Furlan 2022
 
             </p>
