--- a/fran.html
+++ b/fran.html
@@ -176,12 +176,12 @@
     </div>
     <!--fin idiomas-->
 
-    <!--footer-->
-    <footer>
+       <!--footer-->
+       <footer>
         <div class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
             <div class="row">
                 
-            <p>
+            <p class="footer">
                 Site constructed by Veronica Furlan 2022
 
             </p>
