--- a/index.html
+++ b/index.html
@@ -52,25 +52,25 @@
             <div>
                 <p id="desc"> Behind every computer or mobile device there is a person. Behind every post, a thought. 
             
-                    My objective in life is to make the internet a little less angry and a little kinder. 
+                    My objective in life is to make the internet a nicer place. 
                     <br>
                     <br>
-                    I am journalist willing to explore the digital and corporate worlds. I have experience in TV Broadcasting and news writing for Argentina and Spain.
+                    I am journalist willing to explore the digital and corporate worlds. I have experience in TV Broadcasting and digital journalism for Argentina and Spain.
                     <br>
                     <br>
-                    Storytelling is my passion, I like working within a group and I get motivated by big objectives.
+                    Storytelling is my passion. Writing can be quite lonely so I also enjoy tasks that involve taking part of a group. I get motivated by team objectives.
                     <br>
                     <br>
-                    I command a ship called "TN de Noche" and I am also part of a team called "Solo una Vuelta Más". This two programs are transmitted by TN, one of the largest News chains in Latin America.
+                    I command a ship called "TN de Noche" and I am also part of a family called "Solo una Vuelta Más". This two programs are transmitted by TN, one of the largest TV networks in Latin America.
                     <br>
                     <br>
-                    With regards to TV Producing, I've been everywhere: from picking up the phone to planning new products or organizing specials. I consider the videograph a key asset and I proudly work on them.
+                    With regards to TV Producing, I've been everywhere: from picking up the phone to planning new products or special transmissions. I consider the videograph a key asset and I proudly work on it.
                     <br>
                     <br>
-                    One of the most difficult lessons that I've learnt these past years has been to work with multidisciplinary teams. I finally got to see that not everyone has the same motivation and that people are more important than the place they occupy within the company. I am more mature, I developed interpersonal skills and now I enjoy a good debate or a negotiation to get my ideas through.
+                    One of the most difficult lessons that I've learnt these past years has been to work with multidisciplinary teams. After hitting my head against the wall several times, I finally understood that not everyone has the same level of motivation and that people are more important than their hierarchy. I am more mature, I developed interpersonal skills and now I enjoy a good debate or a negotiation to get my ideas through.
                     <br>
                     <br>
-                    I am very keen on writing. I, of course, write way better in Spanish. I've written for 20 Minutos España and Radio France International. Currently I collaborate as a correspondent for El Confidencial (Spain).
+                    I am very keen on writing. I, of course, write better in Spanish. I've worked for 20 Minutos Spain and Radio France International. Currently I collaborate as a correspondent for El Confidencial (Spain).
                     <br>
                     <br>
                     </p>
@@ -80,13 +80,13 @@
                     A bit about me:
                     <br>
                     <br>
-                    I was born in Junin de los Andes, Patagonia Argentina. I moved to Buenos Aires at the age of 18.
+                    I was born in Junin de los Andes, Patagonia Argentina. I moved to Buenos Aires when I entered university, just after my 18th birthday.
                     <br>
                     <br>
-                    In 2012-2013 I lived in Barcelona to study my Master's degree. Apart from learning about International Relations and Diplomacy, I gained a beautiful group of Catalan, Spanish and Portuguese friends. That experience led me back to Buenos Aires, to a trainee in Todo Noticias where I currently work.
+                    In 2012-2013 I lived in Barcelona to study a Master's degree in International Journalism. Apart from learning about International Relations and Diplomacy, I gained a beautiful group of Catalan, Spanish and Portuguese friends. That experience led me back to Buenos Aires, to a trainee in Todo Noticias where I currently work.
                     <br>
                     <br>
-                    Last year I started studying Javascript and I discovered that I like web desing a lot. I made this webpage from scratch using CSS and HTML. I am living in Buenos Aires but I am willing to live in Italy (I have citizenship).
+                    Last year I started studying Javascript and I discovered that I like web desing a lot. I made this webpage from scratch using CSS and HTML. I am living in Buenos Aires but I am able to relocate to Europe, since I have Italian citizenship.
                 </p>
 
             </div>
@@ -160,7 +160,7 @@
         </div>
             <div class="row mt-4" data-aos="fade-up">
             <div class="mt-2">
-                <h4> CODO A CODO PROGRAM - WEB DEVELOPMENT </h4>
+                <h4> CODO A CODO PROGRAM - JAVASCRIPT FULL STACK </h4>
                  <p> <span class="material-icons md-dark">access_time_filled</span> 2021</p></span>   
                 <p><em>Agencia de Aprendizaje a lo Largo de la Vida</em></p>
                 <a class="nav-link text-black" href="https://aulasvirtuales.bue.edu.ar/"><p><span class="material-icons md-dark">link</span>https://aulasvirtuales.bue.edu.ar/</p></a>
