--- a/esp.html
+++ b/esp.html
@@ -111,7 +111,7 @@
             </div>
             
             <div class="mt-5" data-aos="fade-up">
-                <h4> REDACTORA FREELANCE - EL CONFIDENCIAL, SPAIN </h4>
+                <h4> REDACTORA FREELANCE - EL CONFIDENCIAL, MADRID </h4>
                 <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2017 - CURRENTLY </p>
                 <p><em>El Confidencial es un medio digital español. Escribo sobre eventos políticos y económicos de la actualidad argentina.
                 </em></p>
@@ -119,13 +119,13 @@
             </div>
         
             <div class="mt-5" data-aos="fade-up">
-                <h4> BLOGGER - 20 MINUTOS, SPAIN </h4>
+                <h4> BLOGGER - 20 MINUTOS, ESPAÑA </h4>
                 <p class="time"> <span class="material-icons md-dark">access_time_filled</span>2013 - 2016 </p>   
                 <p><em>Este trabajo comenzó como un proyecto personal con varias amigas europeas. Armamos un blog que luego ganó los Premios 20 Blogs y pasamos a publicar para 20 Minutos España.</em></p>
                 <a class="nav-link text-black" href="https://blogs.20minutos.es/goldman-sachs-is-not-an-after-shave/"><p><span class="material-icons md-dark">link</span>https://blogs.20minutos.es/goldman-sachs-is-not-an-after-shave/</p></a>
             </div>
             <div class="mt-5" data-aos="fade-up">
-                <h4> REPORTERA RADIAL - RFI, FRANCE </h4>
+                <h4> REPORTERA RADIAL - RFI, PARÍS </h4>
                 <p> <span class="material-icons md-dark">access_time_filled</span>2013 - 2013 </p>
                 <p><em>Realicé una beca en Radio Francia Internacional, en las emisiones en Español. Me tocó hacer reportes sobre Latinoamérica, Francia y el Mundo Árabe. Duración: 2 meses.</em></p>
                     <a class="nav-link text-black" href="https://www.rfi.fr/es/"><p><span class="material-icons md-dark">link</span>https://www.rfi.fr/es/</p></a>
