--- a/fran.html
+++ b/fran.html
@@ -91,7 +91,7 @@
             </div>
             
             <div class="mt-5" data-aos="fade-up">
-                <h4> FREELANCE RÉPORTEUR - EL CONFIDENCIAL, SPAIN </h4>
+                <h4> FREELANCE RÉPORTEUR - EL CONFIDENCIAL, MADRID </h4>
                 <p> <span class="material-icons md-dark">access_time_filled</span> 2017 - CURRENTLY </p>
                 <p><em>El Confidencial est un journal digital en Espagne. Rédaction Freelance des
                     articles qui touchent la réalité économique et social de la Argentine.</em></p>
@@ -99,7 +99,7 @@
             </div>
         
             <div class="mt-5" data-aos="fade-up">
-                <h4> RADIO RÉPORTEUR - RFI, FRANCE </h4>
+                <h4> RADIO RÉPORTEUR - RFI, PARIS </h4>
                 <p> <span class="material-icons md-dark">access_time_filled</span>2013 - 2013 </p>
                 <p><em>J'ai fait un stage pendant un mois dans le service en Espagnol de RFI. Réalisation et
                     édition de pièces en traitant la France et le monde Arab.</em></p>
