--- a/esp.html
+++ b/esp.html
@@ -199,6 +199,11 @@
         </div>
     </div>
     <!--fin idiomas-->
+    <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
+        <div class="row mt-2 p-2" data-aos="fade-up">
+            <p>contáctame: veronicaafurlan@gmail.com</p>
+        </div>
+        </div>
 
       <!--footer-->
       <footer>
