--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
         </div>
     </div>
     <!--fin idiomas-->
+    <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
+        <div class="row mt-2 p-2" data-aos="fade-up">
+            <p>contact me: veronicaafurlan@gmail.com</p>
+        </div>
+        </div>
 
     <!--footer-->
     <footer>
