--- a/fran.html
+++ b/fran.html
@@ -84,7 +84,7 @@
             <div class="row mt-4" data-aos="fade-up">
             <div class="mt-2" data-aos="fade-up">
                 <h4> PRODUCTRICE TV - TODO NOTICIAS, BUENOS AIRES </h4>
-                 <p> <span class="material-icons md-dark">access_time_filled</span> 2013 - CURRENTLY </p></span>   
+                 <p> <span class="material-icons md-dark">access_time_filled</span> 2013 - maintenant </p></span>   
                 <p><em>Réalisation audiovisuel, planification de couverture, appelles aux interviewés,
                     édition de pièces, mise en scène et vérification des informations.  </em></p>
                 <a class="nav-link text-black" href="http://tn.com.ar/"><p><span class="material-icons md-dark">link</span>http://tn.com.ar/</p></a>
@@ -92,7 +92,7 @@
             
             <div class="mt-5" data-aos="fade-up">
                 <h4> FREELANCE RÉPORTEUR - EL CONFIDENCIAL, MADRID </h4>
-                <p> <span class="material-icons md-dark">access_time_filled</span> 2017 - CURRENTLY </p>
+                <p> <span class="material-icons md-dark">access_time_filled</span> 2017 - maintenant </p>
                 <p><em>El Confidencial est un journal digital en Espagne. Rédaction Freelance des
                     articles qui touchent la réalité économique et social de la Argentine.</em></p>
                 <a class="nav-link text-black" href="https://www.elconfidencial.com/autores/corresponsales-ec12-1976/"><p><span class="material-icons md-dark">link</span>https://www.elconfidencial.com</p></a>
