--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     In 2012-2013 I lived in Barcelona to study a Master's degree in International Journalism. Apart from learning about International Relations and Diplomacy, I gained a beautiful group of Catalan, Spanish and Portuguese friends. That experience led me back to Buenos Aires, to a trainee in Todo Noticias where I currently work.
                     <br>
                     <br>
-                    Last year I started studying Javascript and I discovered that I like web desing a lot. I made this webpage from scratch using CSS and HTML. I am living in Buenos Aires but I am able to relocate to Europe, since I have Italian citizenship.
+                    Last year I started studying Javascript and I discovered that I like web desing a lot. I made this webpage from scratch using CSS and HTML. I am living in Buenos Aires but I am able to relocate to Europe, since I have Italian citizenship and Spanish NIE.
                 </p>
 
             </div>
