--- a/esp.html
+++ b/esp.html
@@ -77,7 +77,7 @@
                     En 2012-2013 hice un máster en la Universitat Pompeu Fabra de Barcelona que me abrió muchas puertas y me regaló un puñado de amigos catalanes, españoles y portugueses. Gracias a ese máster volví a la Argentina para trabajar en TN como becaria y desde entonces estoy allí.
                     <br>
                     <br>
-                    Hace un tiempo me sumergí en el mundo de la programación gracias al curso Codo a Codo de la Ciudad de Buenos Aires. Elegí estudiar Javascript y en el camino aprendí suficiente HTML y CSS como para hacer esta página. Descubrí que me apasiona el diseño web y no paro de hacer mini proyectos en mi tiempo libre. Mi objetivo a largo plazo es trabajar remoto. Tengo ciudadanía italiana y permiso para trabajar en algunos países de Europa.
+                    Hace un tiempo me sumergí en el mundo de la programación gracias al curso Codo a Codo de la Ciudad de Buenos Aires. Elegí estudiar Javascript y en el camino aprendí suficiente HTML y CSS como para hacer esta página. Descubrí que me apasiona el diseño web y no paro de hacer mini proyectos en mi tiempo libre. Mi objetivo a largo plazo es trabajar remoto. Tengo ciudadanía italiana y NIE español.
                 </p>
 
             </div>
