--- a/esp.html
+++ b/esp.html
@@ -58,7 +58,7 @@
                     Pasé por todos los rincones de la producción de TV, desde contestar el teléfono a cranear nuevos productos o notas especiales. Considero importantísimo al videograph, formo parte de "la patria zocalera" con mucho orgullo.
                     <br>
                     <br>
-                    Lo que más me costó aprender en estos años de experiencia en televisión fue a trabajar con equipos multidisciplinarios. A la larga entendí que a todos nos motivan cosas diferentes y que las personas están por encima del puesto que ocupan. Como dice el dicho "hablando la gente se entiende". En ese sentido puedo decir que maduré mis habilidades interpersonales y hoy me siento cómoda en situaciones de negociación.
+                    Lo que más me costó en estos años de experiencia en televisión fue aprender a trabajar con equipos multidisciplinarios. A la larga entendí que a todos nos motivan cosas diferentes y que las personas están por encima del puesto que ocupan. Como dice el dicho "hablando la gente se entiende". En ese sentido puedo decir que maduré mis habilidades interpersonales y hoy me siento cómoda en situaciones de negociación.
                     <br>
                     <br>
                     Me encanta escribir artículos y guiones. Actualmente "despunto el vicio" en El Confidencial pero pasé por 20 Minutos España y Radio Francia Internacional.
