--- a/esp.html
+++ b/esp.html
@@ -193,7 +193,7 @@
                 <p><em>Básico - sin diploma</em></p>
             </div>
             <div class="mt-5" data-aos="fade-up">
-                <h4> ITALIANO </h4> 
+                <h4> CATALÁN </h4> 
                     <p><em>En curso</em></p>
                 </div>
         </div>
