--- a/fran.html
+++ b/fran.html
@@ -169,7 +169,7 @@
                 <p><em>Convérsation</em></p>
             </div>
             <div class="mt-5" data-aos="fade-up">
-                <h4> ITALIEN </h4> 
+                <h4> CATALAN </h4> 
                     <p><em>En train de l'étudier</em></p>
                 </div>
         </div>
