--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <p class="time"><em>Basic - no formal diploma</em></p>
             </div>
             <div class="mt-5" data-aos="fade-up">
-                <h4> ITALIAN </h4> 
+                <h4> CATALAN </h4> 
                     <p class="time"><em>Currently studying</em></p>
                 </div>
         </div>
