--- a/blog.html
+++ b/blog.html
@@ -61,8 +61,11 @@
                                 <a class="text-black text-decoration-none" href="https://verfur0306.github.io/codoacodocomision11/actividadtres/" target="_blank" > <p>Card Design - Bootstrap </p></a>
                             </li>
                             <li class="links">
-                                <a class="text-black text-decoration-none" href="https://verfur0306.github.io/codoacodocomision11/javascript/" target="_blank" > <p>Basic Javascript calculator </p></a>
+                                <a class="text-black text-decoration-none" href="https://www.figma.com/file/hUGUpH8fBZGqC0eJyZBzdU/ECOMUEBLES?node-id=0%3A1" target="_blank" > <p>Basic Javascript calculator </p></a>
                             </li>
+                            <li class="links">
+                              <a class="text-black text-decoration-none" href="https://verfur0306.github.io/codoacodocomision11/javascript/" target="_blank" > <p>Figma canvas to a webpage that I am currently working on</p></a>
+                          </li>
                         </ul>
                     </div>
                     
