--- a/esp.html
+++ b/esp.html
@@ -51,10 +51,11 @@
             <H2>PERIODISTA & JR DEVELOPER</H2>
             
             <div>
-                <p id="desc"> Me gusta contar historias, me potencia trabajar en equipo y me motivan los objetivos grandes. 
+                <p id="desc"> 
+                    Me gusta contar historias, me potencia trabajar en equipo y me motivan los objetivos grupales. 
                     <br>
                     <br>
-                    Soy la capitana de un barco que se llama TN de Noche y formo parte de la banda de Solo Una Vuelta Más, dos noticieros de la señal argentina Todo Noticias (Artear - Canal 13).
+                    Estuve a cargo de la redacción de Todo Noticias en el turno noche, de 8 PM a 1 AM. Gerencié un grupo de 6 personas en el último puesto que ocupé en la empresa, como Productora Ejecutiva del noticiero TN de Noche.
                     Pasé por todos los rincones de la producción de TV, desde contestar el teléfono a cranear nuevos productos o notas especiales. Considero importantísimo al videograph, formo parte de "la patria zocalera" con mucho orgullo.
                     <br>
                     <br>
@@ -71,13 +72,13 @@
                     Un poco sobre mí:
                     <br>
                     <br>
-                    Nací en Junín de los Andes, en el sur de la Argentina pero hace media vida vine a estudiar a Buenos Aires. 
+                    Nací en Junín de los Andes, en el sur de la Argentina pero hace unos quince años fui a estudiar a Buenos Aires. 
                     <br>
                     <br>
-                    En 2012-2013 hice un máster en la Universitat Pompeu Fabra de Barcelona que me abrió muchas puertas y me regaló un puñado de amigos catalanes, españoles y portugueses. Gracias a ese máster volví a la Argentina para trabajar en TN como becaria y desde entonces estoy allí.
+                    En 2012-2013 hice un máster en la Universitat Pompeu Fabra de Barcelona que me abrió muchas puertas y me regaló un puñado de amigos catalanes, españoles y portugueses. Gracias a ese máster volví a la Argentina para trabajar en TN como becaria y me quedé por casi nueve años.
                     <br>
                     <br>
-                    Hace un tiempo me sumergí en el mundo de la programación gracias al curso Codo a Codo de la Ciudad de Buenos Aires. Elegí estudiar Javascript y en el camino aprendí suficiente HTML y CSS como para hacer esta página. Descubrí que me apasiona el diseño web y no paro de hacer mini proyectos en mi tiempo libre. Mi objetivo a largo plazo es trabajar remoto. Tengo ciudadanía italiana y NIE español.
+                    Hace un tiempo me sumergí en el mundo de la programación gracias a los cursos de Codo a Codo 4.0 y Coderhouse. Elegí estudiar Javascript y en el camino aprendí suficiente HTML y CSS como para hacer esta página. Descubrí que me apasiona el diseño web y no paro de hacer mini proyectos en mi tiempo libre. Mi objetivo es encontrar un trabajo que combine estos nuevos intereses con la escritura, como pueden ser los puestos de Copywriter o UX Writer. Además me gustaría tener un salario que me permita vivir en Barcelona, llegaré allí en septiembre. Tengo ciudadanía italiana y NIE español.
                 </p>
 
             </div>
@@ -201,7 +202,8 @@
     <!--fin idiomas-->
     <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
         <div class="row mt-2 p-2" data-aos="fade-up">
-            <p>contáctame: veronicaafurlan@gmail.com</p>
+            <p>Contáctame: veronicaafurlan@gmail.com</p>
+            <p><a href="https://www.linkedin.com/in/ver%C3%B3nica-furlan-349a7723/">Enlace a mi Linkedin</a></p>
         </div>
         </div>
 
