--- a/fran.html
+++ b/fran.html
@@ -177,7 +177,8 @@
     <!--fin idiomas-->
     <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
         <div class="row mt-2 p-2" data-aos="fade-up">
-            <p> veronicaafurlan@gmail.com</p>
+            <p>Envoyez moi un e-mail: veronicaafurlan@gmail.com</p>
+            <p><a href="https://www.linkedin.com/in/ver%C3%B3nica-furlan-349a7723/">Lien a mon Linkedin</a></p>
         </div>
         </div>
        <!--footer-->
