--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div>
                 <p id="desc"> Behind every computer or mobile device there is a person. Behind every post, a thought. 
             
-                    My objective in life is to make the internet a nicer place. 
+                    My objective is to make the internet a better place. 
                     <br>
                     <br>
                     I am journalist willing to explore the digital and corporate worlds. I have experience in TV Broadcasting and digital journalism for Argentina and Spain.
@@ -61,13 +61,13 @@
                     Storytelling is my passion. Writing can be quite lonely so I also enjoy tasks that involve taking part of a group. I get motivated by team objectives.
                     <br>
                     <br>
-                    I command a ship called "TN de Noche" and I am also part of a family called "Solo una Vuelta Más". This two programs are transmitted by TN, one of the largest TV networks in Latin America.
+                    I used to work in TN, one of the largest TV networks in Latin America. I was in charge of the night shift, from 8 pm to 1 am. I managed a group of 6 people in order to make the night edition of the TV Channel.
                     <br>
                     <br>
-                    With regards to TV Producing, I've been everywhere: from picking up the phone to planning new products or special transmissions. I consider the videograph a key asset and I proudly work on it.
+                    With regards to TV Producing, I've been everywhere: from picking up the phone to planning new products or special transmissions. I consider the videograph a key asset and I am proud to say that I have worked many years on it.
                     <br>
                     <br>
-                    One of the most difficult lessons that I've learnt these past years has been to work with multidisciplinary teams. After hitting my head against the wall several times, I finally understood that not everyone has the same level of motivation and that people are more important than their hierarchy. I am more mature, I developed interpersonal skills and now I enjoy a good debate or a negotiation to get my ideas through.
+                    One of the most difficult lessons that I've learnt these past years has been to work with multidisciplinary teams. After hitting my head against the wall several times, I finally understood that not everyone has the same level of motivation or sense of urgence and that people are more important than their hierarchy. I am more mature, I developed interpersonal skills and now I enjoy a good debate or a negotiation to get my ideas through.
                     <br>
                     <br>
                     I am very keen on writing. I, of course, write better in Spanish. I've worked for 20 Minutos Spain and Radio France International. Currently I collaborate as a correspondent for El Confidencial (Spain).
@@ -86,7 +86,7 @@
                     In 2012-2013 I lived in Barcelona to study a Master's degree in International Journalism. Apart from learning about International Relations and Diplomacy, I gained a beautiful group of Catalan, Spanish and Portuguese friends. That experience led me back to Buenos Aires, to a trainee in Todo Noticias where I currently work.
                     <br>
                     <br>
-                    Last year I started studying Javascript and I discovered that I like web desing a lot. I made this webpage from scratch using CSS and HTML. I am living in Buenos Aires but I am able to relocate to Europe, since I have Italian citizenship and Spanish NIE.
+                    Last year I started studying Javascript and I discovered that I like web desing a lot. I made this webpage from scratch using CSS and HTML. I am moving back to Barcelona with my family on September 6th. I have Italian citizenship and Spanish NIE.
                 </p>
 
             </div>
@@ -212,7 +212,8 @@
     <!--fin idiomas-->
     <div id="mail" class="container col-sd-12 col-md-9 col-lg-5 text-center mt-5">
         <div class="row mt-2 p-2" data-aos="fade-up">
-            <p>contact me: veronicaafurlan@gmail.com</p>
+            <p>Contact me: veronicaafurlan@gmail.com</p>
+            <p><a href="https://www.linkedin.com/in/ver%C3%B3nica-furlan-349a7723/">Link to my Linkedin</a></p>
         </div>
         </div>
 
