--- a/esp.html
+++ b/esp.html
@@ -106,14 +106,14 @@
             <div class="row mt-4" data-aos="fade-up">
             <div class="mt-2" data-aos="fade-up">
                 <h4> PRODUCTORA EJECUTIVA - TODO NOTICIAS, BUENOS AIRES </h4>
-                 <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2013 - CURRENTLY </p></span>   
-                <p><em>Mi responsabilidad es contactar entrevistados, armar el orden, hacer la cobertura y eventualmente videograph. Estoy a cargo de TN de Noche con Franco Mercuriali. Tres personas reportan a mí en el turno noche.</em></p>
+                 <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2013 - 2022 </p></span>   
+                <p><em>Empecé en la producción como Junior y avancé hasta quedar a cargo del turno noche del canal. Seis personas me reportaban en este puesto. Estuve  a cargo del noticiero TN de Noche con Franco Mercuriali.</em></p>
                 <a class="nav-link text-black" href="http://tn.com.ar/"><p><span class="material-icons md-dark">link</span>http://tn.com.ar/</p></a>
             </div>
             
             <div class="mt-5" data-aos="fade-up">
                 <h4> REDACTORA FREELANCE - EL CONFIDENCIAL, MADRID </h4>
-                <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2017 - CURRENTLY </p>
+                <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2017 - ACTUALIDAD </p>
                 <p><em>El Confidencial es un medio digital español. Escribo sobre eventos políticos y económicos de la actualidad argentina.
                 </em></p>
                 <a class="nav-link text-black" href="https://www.elconfidencial.com/autores/corresponsales-ec12-1976/"><p><span class="material-icons md-dark">link</span>https://www.elconfidencial.com</p></a>
