--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="mt-2">
                 <h4> TV PRODUCER - TODO NOTICIAS, BUENOS AIRES </h4>
                  <p class="time"> <span class="material-icons md-dark">access_time_filled</span> 2013 - CURRENTLY </p></span>   
-                <p><em>TN is a 24-hour news channel. It has the largest Newsroom in Latin America. I am in charge of the night edition TN de Noche (host: Franco Mercuriali).</em></p>
+                <p><em>TN is a 24-hour news channel. It has the largest Newsroom in Latin America. I was in charge of the night edition TN de Noche (host: Franco Mercuriali).</em></p>
                 <a class="nav-link text-black" href="http://tn.com.ar/"><p><span class="material-icons md-dark">link</span>http://tn.com.ar/</p></a>
             </div>
             
